--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/TimeSettingTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/TimeSettingTemplate.html
@@ -1,10 +1,10 @@
 ﻿<div ng-controller="RoutingRules_TimeSettingTemplateController">
     <vr-row removeline>
         <vr-columns colnum="4">
-            <vr-datetimepicker label="Begin Effective Date:" type="date" value="BED" isrequired></vr-datetimepicker>
+            <vr-datetimepicker label="Begin Effective Date:" type="date" value="BEDDate" isrequired></vr-datetimepicker>
         </vr-columns>
         <vr-columns colnum="4">
-            <vr-datetimepicker label="End Effective Date:" type="date" value="EED"></vr-datetimepicker>
+            <vr-datetimepicker label="End Effective Date:" type="date" value="EEDDate"></vr-datetimepicker>
         </vr-columns>
     </vr-row>
 
