--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
@@ -1,3 +1,44 @@
-﻿<div ng-controller="BusinessProcess_BPDefinitionManagementController">
-    {{testModel}}
-</div>
+﻿<vr-panel ng-controller="BusinessProcess_BPDefinitionManagementController">
+
+    <vr-form name="formFilter">
+        <div ng-hide="filterSectionCollapsed">
+            <vr-row removeline>
+                <vr-columns colnum="2">
+                    <vr-textbox label="Name:" value="name"></vr-textbox>
+                </vr-columns>
+
+                <vr-columns colnum="2">
+                    <vr-textbox label="Title:" value="title"></vr-textbox>
+                </vr-columns>
+            </vr-row>
+            <vr-row>
+            </vr-row>
+        </div>
+        <vr-row removeline>
+            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                <div transclude-to="buttons">
+                    <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
+                </div>
+            </vr-actionbar>
+        </vr-row>
+
+
+        <div>
+            <vr-row>
+                <vr-columns colnum="12">
+                    <vr-datagrid datasource="definitions" loadmoredata="loadMoreData" on-ready="onGridReady" menuactions="gridMenuActions">
+                        <vr-datagridcolumn headertext="'Name'" field="'Name'" widthfactor="20"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Title'" field="'Title'" widthfactor="20"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'FQTN'" field="'RetryCount'" widthfactor="20"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Config'" field="'Config'" widthfactor="20"></vr-datagridcolumn>
+                    </vr-datagrid>
+                </vr-columns>
+            </vr-row>
+        </div>
+
+    </vr-form>
+
+
+
+
+</vr-panel>
