--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
@@ -6,44 +6,45 @@
         <div ng-hide="filterSectionCollapsed" vr-loader="isInitializing">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" label="From:" value="fromDate" isrequired></vr-datetimepicker>
+                    <vr-datetimepicker type="date" label="Date:" value="fromDate" isrequired></vr-datetimepicker>
                 </vr-columns>           
                 <vr-columns colnum="2">
                     <vr-textbox value="periodCount" label="Last:"  isrequired />
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-select datasource="timePeriod" field="timePeriod.description"  selectedvalues="periodTypeValue" label="" isrequired></vr-select>
+                    <vr-select datasource="timePeriods" datatextfield="description" datavaluefield="value" selectedvalues="selectedTimePeriod" label="Time Period:" isrequired></vr-select>
                 </vr-columns>    
                 <vr-columns colnum="2">
-                    <vr-select datasource="variationReportOptions" field="variationReportOptions.description" selectedvalues="selectedReportOption" ng-model="selectedReportOption" label="Variation Reports" isrequired></vr-select>
+                    <vr-select datasource="variationReportOptions" datatextfield="description" datavaluefield="value" selectedvalues="selectedReportOption" label="Variation Reports:" isrequired></vr-select>
                 </vr-columns>     
             </vr-row>
+            <vr-row></vr-row>
         </div>
     </vr-form>
 
-    <vr-row>
+    <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 
             <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="getVariationReportsData"></vr-button> <!--""-->
-                <vr-button type="Reset"></vr-button>
+                <vr-button type="Search" formname="formFilter" data-onclick="onSearch"></vr-button> <!--""-->
             </div>
         </vr-actionbar>
     </vr-row>
     <!--<input type="text" ng-model="name" />-->
 
 
-    <div>
+    <div vr-loader="isLoading">
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-datagrid datasource="data"  >  <!--ng-grid="gridOptions"-->
+                <vr-datagrid datasource="data" pagersettings="mainGridPagerSettings">
+                    <!--ng-grid="gridOptions"-->
                     <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'_AVG'" field="'PeriodTypeValueAverage'" type="'Number'"></vr-datagridcolumn><!--periodTypeValue+-->
                     <vr-datagridcolumn headertext="'_%'" field="'PeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn ng-repeat="item in timeRanges" field="'TotalDurationsPerDate[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'"></vr-datagridcolumn>
-               </vr-datagrid>
+                </vr-datagrid>
             </vr-columns>
         </vr-row>
     </div>
