--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPTrackingModal.html
@@ -3,7 +3,7 @@
         <vr-form name="formBPTrackingModal">
             <vr-row>
                 <vr-columns colnum="12">
-                    <vr-datagrid datasource="::ctrl.datasource" loadmoredata="ctrl.loadMoreData" on-ready="ctrl.onGridReady" >
+                    <vr-datagrid datasource="::ctrl.datasource" pagersettings="ctrl.mainGridPagerSettings" on-ready="ctrl.onGridReady">
                         <vr-datagridcolumn headertext="'Message'" field="'Message'" widthfactor="50"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="20"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Event Time'" widthfactor="30">{{dataItem.EventTime | date:'yyyy-MM-dd hh:mm:ss' }}</vr-datagridcolumn>
