--- a/TOneV2/Code/TOneV2/TOne.BI.Web/BI/Views/Test.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/BI/Views/Test.html
@@ -16,10 +16,10 @@
 
 
                 <vr-columns colnum="2">
-                    <vr-select datasource="Measures" datatextfield="Name" datavaluefield="Id" selectedvalues="selectedMeasures" label="Measures:" ismultipleselection isRequired></vr-select>
+                    <vr-select datasource="Measures" datatextfield="DisplayName" datavaluefield="Name" selectedvalues="selectedMeasures" label="Measures:" ismultipleselection isrequired></vr-select>
                 </vr-columns>
                 <vr-columns colnum="2" ng-show=" selectedOperationType.value == 'TopEntities'">
-                    <vr-select datasource="Entities" datatextfield="Name" datavaluefield="Id" selectedvalues="selectedEntity" label="Entities:"></vr-select>
+                    <vr-select datasource="Entities" datatextfield="DisplayName" datavaluefield="Name" selectedvalues="selectedEntity" label="Entities:"></vr-select>
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-select datasource="directives" datatextfield="description" datavaluefield="value" label="Element Type" selectedvalues="selectedDirective" isrequired hidefilterbox></vr-select>
