--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Security/Login.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Security/Login.cshtml
@@ -26,7 +26,7 @@
             </div><!--/.nav-collapse -->
         </div>
     </nav>
-    <div id="wrapper">
+    <div class="main">
         <div ng-include="'/Client/Modules/Security/Views/Login.html'"></div>
     </div>
 
