--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Views/BPDefinitionManagement.html
@@ -23,21 +23,19 @@
         <div>
             <vr-row>
                 <vr-columns colnum="12">
-                    <vr-datagrid datasource="filteredDefinitions" loadmoredata="loadMoreData" on-ready="onGridReady">
+                    <vr-datagrid datasource="filteredDefinitions" loadmoredata="loadMoreData" on-ready="onGridReady" menuactions="gridMenuActions">
                         <vr-datagridcolumn headertext="'Process'" field="'Title'" widthfactor="20"></vr-datagridcolumn>
                         <vr-datagridcolumn headertext="'Running Instances'" field="'RunningInstances'" widthfactor="20"></vr-datagridcolumn>
                         <vr-datagridexpandablerow>
 
                             <vr-datagrid datasource="dataItem.OpenedInstances">
                                 <vr-datagridcolumn headertext="'ID'" field="'ID'" widthfactor="20"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'Title'" field="'Title'" widthfactor="20"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'ParentID'" field="'ParentID'" widthfactor="20"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'DefinitionID'" field="'DefinitionID'" widthfactor="20"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'WorkflowInstanceID'" field="'WorkflowInstanceID'" widthfactor="20"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'ExecutionStatus'" field="'ExecutionStatus'" widthfactor="20"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'RetryCount'" field="'RetryCount'" widthfactor="20"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'LastMessage'" field="'LastMessage'" widthfactor="20"></vr-datagridcolumn>
-                                <vr-datagridcolumn headertext="'CreatedTime'" field="'CreatedTime'" widthfactor="20"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Parent ID'" field="'ParentID'" widthfactor="20"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Workflow Instance ID'" field="'WorkflowInstanceID'" widthfactor="20"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Execution Status'" field="'ExecutionStatus'" widthfactor="20"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Retry Count'" field="'RetryCount'" widthfactor="20"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Last Message'" field="'LastMessage'" widthfactor="20"></vr-datagridcolumn>
+                                <vr-datagridcolumn headertext="'Started On'" field="'CreatedTime'" widthfactor="20"></vr-datagridcolumn>
                             </vr-datagrid>
 
                         </vr-datagridexpandablerow>
