added maxheight to DynamicPage
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24012

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPagesEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPagesEditor.html
@@ -1,5 +1,5 @@
 ﻿<div vr-modalcontent ng-controller="Security_DynamicPagesEditorController" width="'80%'">
-    <vr-modalbody vr-loader="isGettingData">
+    <vr-modalbody vr-loader="isGettingData" maxheight="'700px'">
         <vr-form name="formDynamicPagesEditor">
             <vr-choices selectedindex="selectedGroupKeyIndex" onselectionchanged="groupKeySelectionChanged();">
                 <vr-choice isselected="settingSelected">Setting</vr-choice>
