fixed navigation to BI ZoneDetails
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24028

--- a/TOneV2/Code/TOneV2/TOne.BI.Web/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/BI/Views/Reports/ZoneDetails.html
@@ -1,4 +1,4 @@
-﻿<vr-panel>
+﻿<vr-panel ng-controller="BI_ZoneDetailsController">
     <vr-row>
         <vr-columns colnum="3">
             <h4>Zone Name: {{zoneName}}</h4>
